--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -1,24 +1,111 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
-    <title>Agenda</title>
-</head>
-<body>
-    <div class="ubicaciones">
-        <h2>Agosto</h2>
-        <h3>24 Ago 2023</h3>
-        <h4>Punta Arena - Chile</h4>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d76583.71543818928!2d-70.90626720000002!3d-53.1417673!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0xbc52ca58b309cc21%3A0xfa616a8b65456916!2sPunta%20Arenas%2C%20Magallanes%20y%20la%20Ant%C3%A1rtica%20Chilena%2C%20Chile!5e0!3m2!1ses!2sar!4v1692805493321!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
-        <h3>26 Ago 2023</h3>
-        <h4>Asuncion - Paraguay</h4>
-        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d115431.00086773203!2d-57.5980891!3d-25.296852649999998!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x945da8076e69dbf5%3A0xaceb7a46bf1936c9!2sAsunci%C3%B3n%2C%20Paraguay!5e0!3m2!1ses!2sar!4v1692805662278!5m2!1ses!2sar" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
 
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+  </style>
+
+  <title>Agenda | Soledad</title>
+  <link rel="icon" href="/img/sole-favicon.png" type="image/x-icon">
+  <link rel="stylesheet" type="text/css" href="/style2.css">
+</head>
+<!-- NAVBAR -->
+
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container col-md-10">
+      <a class="navbar-brand" href="/index.html"><img src="/img/soledad_icono.png" class="icono" alt="Logo Soledad"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav col-md-4">
+              <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="/pages/biografia.html">Biografía</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/pages/discografia.html">Discografía</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/pages/agenda.html">Agenda</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+              </li>
+
+          </ul>
+      </div>
+  </div>
+</nav>
+
+
+
+<body>
+  <div class="mes">
+  <h3><strong>Octubre</strong></h3>
+  <div class="linea-horizontal"></div>
+  </div>
+  <div class="card mb-1">
+    <div class="row g-12">
+      <div class="col-md-4">
+        <img src="/img/agenda_1.jpg" class="img-agenda" alt="...">
+      </div>
+      <div class="col-md-4">
+          <h5 class="card-title">Rosario</h5>
+          <p class="card-text">05/10/2023</p>
+          <p class="card-text"><small class="text-muted">Teatro El Circulo</small></p>
+        </div>
+      </div>
     </div>
+  </div>
+  <div class="card mb-1">
+    <div class="row g-12">
+      <div class="col-md-4">
+        <img src="/img/agenda_1.jpg" class="img-agenda" alt="...">
+      </div>
+      <div class="col-md-4">
+          <h5 class="card-title">Rosario</h5>
+          <p class="card-text">06/10/2023</p>
+          <p class="card-text"><small class="text-muted">Teatro El Circulo</small></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <div class="mes">
+    <h3><strong>Noviembre</strong></h3>
+    <div class="linea-horizontal"></div>
+    </div>
+  <div class="card mb-1">
+    <div class="row g-12">
+      <div class="col-md-4">
+        <img src="/img/agenda_2.jpg" class="img-agenda" alt="...">
+      </div>
+      <div class="col-md-4">
+          <h5 class="card-title">Buenos Aires</h5>
+          <p class="card-text">09/11/2023</p>
+          <p class="card-text"><small class="text-muted">Teatro Coliseo</small></p>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br>
+  <br>
+  <br>
+
 </body>
-<br>
-<br>
-<a href="../index.html">Volver a inicio</a>
+<footer class="footer">
+  <p>© Copyright todos los derechos reservados</p>
+</footer>
+
 </html>
