--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -1,30 +1,129 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
-    <title>Biografía</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+  </style>
+
+  <title>Biografía | Soledad</title>
+  <link rel="icon" href="/img/sole-favicon.png" type="image/x-icon">
+  <link rel="stylesheet" type="text/css" href="/style2.css">
 </head>
+<!-- NAVBAR -->
+
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container col-md-10">
+      <a class="navbar-brand" href="/index.html"><img src="/img/soledad_icono.png" class="icono" alt="Logo Soledad"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav col-md-4">
+              <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="/pages/biografia.html">Biografía</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/pages/discografia.html">Discografía</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/pages/agenda.html">Agenda</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+              </li>
+
+          </ul>
+      </div>
+  </div>
+</nav>
+
+
+
 <body>
-    <p>
-        SOLEDAD PASTORUTTI, ES ORIUNDA DE AREQUITO, PEQUEÑO PUEBLO DEL SUR DE LA PROVINCIA DE SANTA FE. NACIÓ EL 12 DE OCTUBRE DE 1980 EN CASILDA, CIUDAD VECINA A AREQUITO. OMAR PASTORUTTI, SU PADRE, LE INCULCÓ SU AMOR POR EL FOLCLORE ARGENTINO Y DESDE MUY PEQUEÑA, ACOMPAÑADA POR MÚSICOS DE SU PUEBLO Y ALREDEDORES, SE PRESENTÓ EN DISTINTOS ESCENARIOS DEL INTERIOR DEL PAÍS.
-        </p>
-        <h3>PRIMER COSQUÍN Y “PONCHO AL VIENTO”</h3>
-        <p>
-        En el verano de 1995 su repercusión en las peñas que circundan el predio del festival de Cosquín hizo que fuera convocada para participar de ese importante evento. Sin embargo, no pudo hacerlo debido a una disposición municipal que impedía que menores de edad sean expuestos en televisión pasada la medianoche. Su primera actuación como artista profesional la realizó el sábado 4 de noviembre de 1995 en el Partido de Escobar, provincia de Buenos Aires.
+  <div class="cuadro-texto">
+    SOLEDAD PASTORUTTI, ES ORIUNDA DE AREQUITO, PEQUEÑO PUEBLO DEL SUR DE LA PROVINCIA DE SANTA FE. NACIÓ EL 12 DE OCTUBRE DE 1980 EN CASILDA, CIUDAD VECINA A AREQUITO. OMAR PASTORUTTI, SU PADRE, LE INCULCÓ SU AMOR POR EL FOLCLORE ARGENTINO Y DESDE MUY PEQUEÑA, ACOMPAÑADA POR MÚSICOS DE SU PUEBLO Y ALREDEDORES, SE PRESENTÓ EN DISTINTOS ESCENARIOS DEL INTERIOR DEL PAÍS.
+  </div>
+  <div class="bio">
+    <img src="/img/sole_bio.jpg" class="img-bio" alt="">
+  </div>
 
-        En 1996, un año después de la frustrada actuación en Cosquín y con apenas 15 años, Soledad vuelve a esa ciudad y esta vez sí se presenta junto a su hermana Natalia Pastorutti en el Festival Nacional del Folclore de Cosquín. El éxito de esa actuación fue tal que se consagró como revelación del festival y recibió el premio “Cosquín de Oro”. Su presentación fue televisada en vivo para todo el país.
+  <div class="cuadro-texto2">
+    <strong>PRIMER COSQUÍN Y “PONCHO AL VIENTO”</strong>
+    <br>
+    <br>
+En el verano de 1995 su repercusión en las peñas que circundan el predio del festival de Cosquín hizo que fuera convocada para participar de ese importante evento. Sin embargo, no pudo hacerlo debido a una disposición municipal que impedía que menores de edad sean expuestos en televisión pasada la medianoche. Su primera actuación como artista profesional la realizó el sábado 4 de noviembre de 1995 en el Partido de Escobar, provincia de Buenos Aires.
 
-        Soledad firmó con la discográfica Sony Music, la cual editó su primer álbum oficial, Poncho al viento. Este trabajo que la compañía consideró de venta regular y que no contó en un comienzo con una gran campaña de marketing, vendió más de 800 mil unidades en muy poco tiempo.
-        </p>
-        <h3>LA SOLE</h3>
-        <p>
-        Su vida se convierte en una gran gira por el país, llegando en 1997 a cantar en 181 pueblos y ciudades de la Argentina. Edita su segundo álbum, La Sole, y los ecos de su voz comenzaron a llegar a Buenos Aires. Sus dos álbumes trepan en las listas de ventas a tal punto que ambos compiten y se alternan en el primer puesto de ventas. Soledad finaliza el año llenando diez veces el teatro Gran Rex, la sala teatral más importante de Buenos Aires.
-    </p>
+En 1996, un año después de la frustrada actuación en Cosquín y con apenas 15 años, Soledad vuelve a esa ciudad y esta vez sí se presenta junto a su hermana Natalia Pastorutti en el Festival Nacional del Folclore de Cosquín. El éxito de esa actuación fue tal que se consagró como revelación del festival y recibió el premio “Cosquín de Oro”. Su presentación fue televisada en vivo para todo el país.
+
+Soledad firmó con la discográfica Sony Music, la cual editó su primer álbum oficial, Poncho al viento. Este trabajo que la compañía consideró de venta regular y que no contó en un comienzo con una gran campaña de marketing, vendió más de 800 mil unidades en muy poco tiempo.
+<br>
+<br>
+
+<strong>“LA SOLE”</strong>
+<br>
+    <br>
+Su vida se convierte en una gran gira por el país, llegando en 1997 a cantar en 181 pueblos y ciudades de la Argentina. Edita su segundo álbum, La Sole, y los ecos de su voz comenzaron a llegar a Buenos Aires. Sus dos álbumes trepan en las listas de ventas a tal punto que ambos compiten y se alternan en el primer puesto de ventas. Soledad finaliza el año llenando diez veces el teatro Gran Rex, la sala teatral más importante de Buenos Aires.
+<br>
+<br>
+<strong>“A MI GENTE”</strong>
+<br>
+    <br>
+Ya en 1998 duplica la cantidad de presentaciones en Buenos Aires realizando más de veinte conciertos, nuevamente en el teatro Gran Rex. Se convierte en la representante argentina seleccionada por Sony Music para componer la canción “Los sueños de todo el mundo”, e incluirla en el álbum editado a nivel internacional con motivo de la realización del Campeonato Mundial de Fútbol. También acompañó oficialmente al seleccionado argentino a Francia.
+
+Luego del mundial, recibió en Madrid (España) una distinción de Sony Music Internacional por haber alcanzado 1.000.000 de unidades vendidas con sus dos primeros álbumes.
+
+Aquellos conciertos en el teatro Gran Rex se convirtieron en su primer álbum en vivo, editándose a finales de año bajo el título de A mi gente.
+
+Los discos “Poncho al viento” y “La Sole” recibieron la certificación “Disco de diamante“, reconocimiento obtenido por pocos artistas en el mundo. Además, Sony Music Argentina la reconoce públicamente como la artista que produjo las mayores ventas en menor tiempo de la historia de la compañía, tomando en cuenta a todos los artistas, de todos los géneros musicales.
+<br>
+<br>
+<strong>LA EDAD DEL SOL</strong>
+<br>
+    <br>
+Durante los primeros meses de 1999 Soledad se sumerge en la filmación de La Edad del Sol (el título de esta película es el anagrama de La Soledad) , su primer experiencia en el cine. El guion de la película gira en torno a una historia que cuenta como un viaje de egresados (donde una de los jóvenes llamada Soledad es una muy famosa artista), se complica de forma sorpresiva.
+
+La película se estrenó el 1 de julio de 1999 e inmediatamente la película se convirtió en el éxito de la temporada cinematográfica. La vieron más de 1.000.000 de espectadores.
+<br>
+<br>
+
+<strong>“YO SI QUIERO A MI PAÍS”</strong>
+<br>
+    <br>
+El productor cubano Emilio Estefan, viaja a la Argentina para conocer a Soledad y así convertirse en el productor artístico de su cuarto álbum, Yo sí quiero a mi país, editado durante el mismo año (1999). Este álbum, grabado en Miami, acerca a Soledad a ritmos de distintos lugares de Latinoamérica y en consecuencia, trasciende fronteras, llevando consigo a la música popular argentina de gira por diversos países tales como Uruguay, Paraguay, Chile, México, Estados Unidos, España y Perú.
+
+En 1999, cuando Soledad alcanzaba el estrellato máximo presentó su propio perfume, al cual llamó “Emoción”. En su momento la cantante declaró: ‘”Mi principal objetivo con esto es destinar un porcentaje de las ventas para hacer obras solidarias, sobre todo en mi pueblo natal.“‘. El especialista francés en fragancias encargado de interpretar su espíritu fue Richard Herpin (creador de fragancias internacionales para Calvin Klein, Celine Dion, Avon Products, Inc., Marc Jacobs, Ralph Lauren). Emoción es una combinación de pétalos de rosa, jazmín muguet y junquillo, con cuerpo avainillado, pinceladas de chocolate y un toque de frescura que le da las hojas de tomate.
+<br>
+<br>
+
+<strong>PRESENTACIONES EN FESTIVALES Y “SOLEDAD”</strong>
+<br>
+    <br>
+El nuevo milenio encuentra a Soledad cantando en numerosos escenarios argentinos y llegando por primera vez, como invitada gracias a su exitoso paso por el Festival del Huaso de Olmué, al Festival Internacional de la Canción de Viña del Mar (Chile), donde le otorgaron uno de los premios del festival, la “Gaviota de Plata“.
+
+A mediados del año vuelve a presentarse en la ciudad de Buenos Aires, tras casi dos años de ausencia, y colma en tres oportunidades la capacidad del Estadio Luna Park.
+
+En el mes de agosto actuó durante cuatro noches en el Festival Folclórico de Martigues (Francia), donde fue declarada revelación. Las críticas de los diarios franceses hablaron de la posible llegada del “Fenómeno Soledad” a Europa.
+
+A su regreso de Francia, se embarca en la grabación de su quinto álbum, Soledad, que salió a la venta a mediados del mes de octubre de 2000. Entre el final de la grabación y la publicación del álbum, Soledad se presentó en el Barbican Centre de Londres ante 1800 espectadores en el marco del “Festival de Cine y Música Argentina” de la capital inglesa.iscográfica Sony Music, la cual editó su primer álbum oficial, Poncho al viento. Este trabajo que la compañía consideró de venta regular y que no contó en un comienzo con una gran campaña de marketing, vendió más de 800 mil unidades en muy poco tiempo.
+
+  </div>
+
+  <footer class="footer">
+    <p>© Copyright todos los derechos reservados</p>
+  </footer>
+
 </body>
-<a href="../index.html">Volver a inicio</a>
-    
-
 
 </html>
