--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -1,17 +1,104 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Contacto</title>
-    <link rel="stylesheet" href="../style.css">
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+  </style>
+
+  <title>Contacto | Soledad</title>
+  <link rel="icon" href="/img/sole-favicon.png" type="image/x-icon">
+  <link rel="stylesheet" type="text/css" href="/style.css">
 </head>
+<!-- NAVBAR -->
+
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container col-md-10">
+      <a class="navbar-brand" href="/index.html"><img src="/img/soledad_icono.png" class="icono" alt="Logo Soledad"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav col-md-4">
+              <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="/pages/biografia.html">Biografía</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/pages/discografia.html">Discografía</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/pages/agenda.html">Agenda</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+              </li>
+
+          </ul>
+      </div>
+  </div>
+</nav>
+
+
 <body>
-    <a href="https://www.lasole.net/">Web oficial</a><br>
-    <a href="https://www.instagram.com/sole_pastorutti/">Instagram</a><br>
-    <a href="https://web.facebook.com/solepastorutti?_rdc=1&_rdr">Facebook</a>
+  <div class="formulario container mt-5">
+    <form>
+      <div class="row -3">
+        <div class="col-md-4">
+          <label for="inputAddress2" class="form-label">Nombre y Apellido</label>
+          <input type="text" class="form-control" id="inputAddress2" placeholder="Ej. Juan Perez">
+        </div>
+      </div>
+      <div class="row -3">
+        <div class="col-md-6">
+          <label for="inputEmail4" class="form-label">Email</label>
+          <input type="email" class="form-control" id="inputEmail4" placeholder="juanperez@example.com">
+        </div>
+      </div>
+      <div class="row -3">
+        <div class="col-md-6">
+          <label for="inputState" class="form-label">Asunto</label>
+          <select id="inputState" class="form-select">
+            <option selected>Seleccionar</option>
+            <option value="Contratación">Contratación</option>
+            <option value="Consulta">Consulta</option>
+            <option value="Otro">Otro</option>
+        </div>
+        </select>
+      </div>
+      <div class="row-3">
+        <div class="col-md-6">
+          <label for="inputTextarea" class="form-label">Comentarios</label>
+          <textarea class="form-control" id="inputTextarea" rows="8"
+            placeholder="Escribe tus comentarios aquí"></textarea>
+            <div class="col-12 mt-5">
+              <button type="submit" class="btn btn-submit">Enviar</button>
+            </div>
+          </div>
+
+      </div>
+  </div>
+
+
+
+  
+  </form>
+  </div>
+
+  <footer class="footer">
+    <p>© Copyright todos los derechos reservados</p>
+  </footer>
+
 </body>
-<br>
-<br>
-<a href="../index.html">Volver a inicio</a>
+
 </html>
