--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -1,20 +1,164 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../style.css">
-    <title>Discografia</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
+    integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
+  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
+    integrity="sha384-HwwvtgBNo3bZJJLYd8oVXjrBZt8cqVSpeBNS5n7C8IVInixGAoxmnlMuBnhbgrkm"
+    crossorigin="anonymous"></script>
+  <style>
+    @import url('https://fonts.googleapis.com/css2?family=Roboto:wght@300&display=swap');
+  </style>
+
+  <title>Discografía | Soledad</title>
+  <link rel="icon" href="/img/sole-favicon.png" type="image/x-icon">
+  <link rel="stylesheet" type="text/css" href="/style2.css">
 </head>
+<!-- NAVBAR -->
+<nav class="navbar navbar-expand-lg bg-body-tertiary">
+  <div class="container col-md-10">
+      <a class="navbar-brand" href="/index.html"><img src="/img/soledad_icono.png" class="icono" alt="Logo Soledad"></a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
+          aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavDropdown">
+          <ul class="navbar-nav col-md-4">
+              <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" aria-current="page" href="/pages/biografia.html">Biografía</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/pages/discografia.html">Discografía</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/pages/agenda.html">Agenda</a>
+              </li>
+              <li class="nav-item">
+                  <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+              </li>
+
+          </ul>
+      </div>
+  </div>
+</nav>
+
+
+
+
 <body>
-    <div>
-        <h2>Natural - 2022</h2>
-        <img class="cds" src="../img/cd_natural.jpg" alt="">
-        <h2>Parte de mi - 2021</h2>
-        <img class="cds" src="../img/cd_parte_de_mi.jpg" alt="">
-        <h2>Soledad 20 años - 2020</h2>
-        <img class="cds" src="../img/cd_20_años.jpg" alt="">
+
+  <div class="row justify-content-center">
+    <div class="col-md-3">
+      <div class="card">
+        <img src="/img/cd_10añossoledad.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">10 Años de Soledad</h5>
+        </div>
+      </div>
     </div>
+    <div class="col-md-3">
+      <div class="card">
+        <img src="/img/cd_2000.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">2000</h5>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card">
+        <img src="/img/cd_20_años.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">20 años</h5>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card">
+        <img src="/img/cd_adondevayas.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">A donde vayas</h5>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card">
+        <img src="/img/cd_folklore.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Folklore</h5>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card">
+        <img src="/img/cd_juntosporunica.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Juntos por única vez</h5>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card">
+        <img src="/img/cd_lafiesta.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">La fiesta</h5>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card">
+        <img src="/img/cd_libre.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Libre</h5>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card">
+        <img src="/img/cd_migente.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title center">Mi gente</h5>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card">
+        <img src="/img/cd_mipais.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Mi país</h5>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card">
+        <img src="/img/cd_natural.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Natural</h5>
+        </div>
+      </div>
+    </div>
+    <div class="col-md-3">
+      <div class="card">
+        <img src="/img/cd_obras.jpg" class="card-img-top" alt="...">
+        <div class="card-body">
+          <h5 class="card-title">Obras</h5>
+        </div>
+      </div>
+    </div>
+  </div>
+  <br>
+  <br>
+  <br>
+
+  <footer class="footer">
+    <p>© Copyright todos los derechos reservados</p>
+  </footer>
+
 </body>
-<a href="../index.html">Volver a inicio</a>
+
 </html>
