--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -50,7 +50,7 @@
 </nav>
 
 
-
+<!-- AGENDA -->
 <body>
   <div class="mes">
   <h3><strong>Octubre</strong></h3>
@@ -102,10 +102,11 @@
   <br>
   <br>
   <br>
-
+<!-- FOOTER -->
+  <footer class="footer">
+    <p>© Copyright todos los derechos reservados</p>
+  </footer>
+  
 </body>
-<footer class="footer">
-  <p>© Copyright todos los derechos reservados</p>
-</footer>
 
 </html>
