--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -52,6 +52,7 @@
 
 
 <body>
+  <!-- BIOGRAFÍA -->
   <div class="cuadro-texto">
     SOLEDAD PASTORUTTI, ES ORIUNDA DE AREQUITO, PEQUEÑO PUEBLO DEL SUR DE LA PROVINCIA DE SANTA FE. NACIÓ EL 12 DE OCTUBRE DE 1980 EN CASILDA, CIUDAD VECINA A AREQUITO. OMAR PASTORUTTI, SU PADRE, LE INCULCÓ SU AMOR POR EL FOLCLORE ARGENTINO Y DESDE MUY PEQUEÑA, ACOMPAÑADA POR MÚSICOS DE SU PUEBLO Y ALREDEDORES, SE PRESENTÓ EN DISTINTOS ESCENARIOS DEL INTERIOR DEL PAÍS.
   </div>
@@ -120,6 +121,7 @@ A su regreso de Francia, se embarca en la grabación de su quinto álbum, Soleda
 
   </div>
 
+  <!-- FOOTER -->
   <footer class="footer">
     <p>© Copyright todos los derechos reservados</p>
   </footer>
