--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -51,6 +51,7 @@
 
 
 <body>
+  <!-- FORMULARIO -->
   <div class="formulario container mt-5">
     <form>
       <div class="row -3">
@@ -94,7 +95,7 @@
   
   </form>
   </div>
-
+  <!-- FOOTER -->
   <footer class="footer">
     <p>© Copyright todos los derechos reservados</p>
   </footer>
