--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -50,9 +50,8 @@
 
 
 
-
+<!-- CARDS -->
 <body>
-
   <div class="row justify-content-center">
     <div class="col-md-3">
       <div class="card">
@@ -155,6 +154,7 @@
   <br>
   <br>
 
+  <!-- FOOTER -->
   <footer class="footer">
     <p>© Copyright todos los derechos reservados</p>
   </footer>
