--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -15,7 +15,7 @@
 
   <title>Discografía | Soledad</title>
   <link rel="icon" href="/img/sole-favicon.png" type="image/x-icon">
-  <link rel="stylesheet" type="text/css" href="/style2.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
@@ -54,7 +54,7 @@
 <body>
   <div class="row justify-content-center">
     <div class="col-md-3">
-      <div class="card">
+      <div class="card-disco">
         <img src="/img/cd_10añossoledad.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">10 Años de Soledad</h5>
@@ -62,7 +62,7 @@
       </div>
     </div>
     <div class="col-md-3">
-      <div class="card">
+      <div class="card-disco">
         <img src="/img/cd_2000.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">2000</h5>
@@ -70,7 +70,7 @@
       </div>
     </div>
     <div class="col-md-3">
-      <div class="card">
+      <div class="card-disco">
         <img src="/img/cd_20_años.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">20 años</h5>
@@ -78,7 +78,7 @@
       </div>
     </div>
     <div class="col-md-3">
-      <div class="card">
+      <div class="card-disco">
         <img src="/img/cd_adondevayas.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">A donde vayas</h5>
@@ -86,7 +86,7 @@
       </div>
     </div>
     <div class="col-md-3">
-      <div class="card">
+      <div class="card-disco">
         <img src="/img/cd_folklore.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Folklore</h5>
@@ -94,7 +94,7 @@
       </div>
     </div>
     <div class="col-md-3">
-      <div class="card">
+      <div class="card-disco">
         <img src="/img/cd_juntosporunica.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Juntos por única vez</h5>
@@ -102,7 +102,7 @@
       </div>
     </div>
     <div class="col-md-3">
-      <div class="card">
+      <div class="card-disco">
         <img src="/img/cd_lafiesta.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">La fiesta</h5>
@@ -110,7 +110,7 @@
       </div>
     </div>
     <div class="col-md-3">
-      <div class="card">
+      <div class="card-disco">
         <img src="/img/cd_libre.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Libre</h5>
@@ -118,7 +118,7 @@
       </div>
     </div>
     <div class="col-md-3">
-      <div class="card">
+      <div class="card-disco">
         <img src="/img/cd_migente.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title center">Mi gente</h5>
@@ -126,7 +126,7 @@
       </div>
     </div>
     <div class="col-md-3">
-      <div class="card">
+      <div class="card-disco">
         <img src="/img/cd_mipais.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Mi país</h5>
@@ -134,7 +134,7 @@
       </div>
     </div>
     <div class="col-md-3">
-      <div class="card">
+      <div class="card-disco">
         <img src="/img/cd_natural.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Natural</h5>
@@ -142,7 +142,7 @@
       </div>
     </div>
     <div class="col-md-3">
-      <div class="card">
+      <div class="card-disco">
         <img src="/img/cd_obras.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Obras</h5>
