--- a/index.html
+++ b/index.html
@@ -15,7 +15,7 @@
 
     <title>Inicio | Soledad</title>
     <link rel="icon" href="/img/sole-favicon.png" type="image/x-icon">
-    <link rel="stylesheet" type="text/css" href="/style.css">
+    <link rel="stylesheet" type="text/css" href="./css/style.css">
 </head>
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
