--- a/pages/agenda.html
+++ b/pages/agenda.html
@@ -15,7 +15,7 @@
 
   <title>Agenda | Soledad</title>
   <link rel="icon" href="/img/sole-favicon.png" type="image/x-icon">
-  <link rel="stylesheet" type="text/css" href="/style2.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <!-- NAVBAR -->
 
@@ -56,7 +56,7 @@
   <h3><strong>Octubre</strong></h3>
   <div class="linea-horizontal"></div>
   </div>
-  <div class="card mb-1">
+  <div class="tarjeta mb-1">
     <div class="row g-12">
       <div class="col-md-4">
         <img src="/img/agenda_1.jpg" class="img-agenda" alt="...">
@@ -69,7 +69,7 @@
       </div>
     </div>
   </div>
-  <div class="card mb-1">
+  <div class="tarjeta mb-1">
     <div class="row g-12">
       <div class="col-md-4">
         <img src="/img/agenda_1.jpg" class="img-agenda" alt="...">
@@ -86,7 +86,7 @@
     <h3><strong>Noviembre</strong></h3>
     <div class="linea-horizontal"></div>
     </div>
-  <div class="card mb-1">
+  <div class="tarjeta mb-1">
     <div class="row g-12">
       <div class="col-md-4">
         <img src="/img/agenda_2.jpg" class="img-agenda" alt="...">
