--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -15,7 +15,7 @@
 
   <title>Contacto | Soledad</title>
   <link rel="icon" href="/img/sole-favicon.png" type="image/x-icon">
-  <link rel="stylesheet" type="text/css" href="/style.css">
+  <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <!-- NAVBAR -->
 
@@ -54,19 +54,19 @@
   <!-- FORMULARIO -->
   <div class="formulario container mt-5">
     <form>
-      <div class="row -3">
+      <div class="row-form -3">
         <div class="col-md-4">
           <label for="inputAddress2" class="form-label">Nombre y Apellido</label>
           <input type="text" class="form-control" id="inputAddress2" placeholder="Ej. Juan Perez">
         </div>
       </div>
-      <div class="row -3">
+      <div class="row-form -3">
         <div class="col-md-6">
           <label for="inputEmail4" class="form-label">Email</label>
           <input type="email" class="form-control" id="inputEmail4" placeholder="juanperez@example.com">
         </div>
       </div>
-      <div class="row -3">
+      <div class="row-form -3">
         <div class="col-md-6">
           <label for="inputState" class="form-label">Asunto</label>
           <select id="inputState" class="form-select">
@@ -77,7 +77,7 @@
         </div>
         </select>
       </div>
-      <div class="row-3">
+      <div class="row-form -3">
         <div class="col-md-6">
           <label for="inputTextarea" class="form-label">Comentarios</label>
           <textarea class="form-control" id="inputTextarea" rows="8"
