--- a/index.html
+++ b/index.html
@@ -28,19 +28,19 @@
         <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav col-md-4">
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
+                    <a class="nav-link" aria-current="page" href="index.html">Inicio</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" aria-current="page" href="/pages/biografia.html">Biografía</a>
+                    <a class="nav-link" aria-current="page" href="pages/biografia.html">Biografía</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/discografia.html">Discografía</a>
+                    <a class="nav-link" href="pages/discografia.html">Discografía</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/agenda.html">Agenda</a>
+                    <a class="nav-link" href="pages/agenda.html">Agenda</a>
                 </li>
                 <li class="nav-item">
-                    <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                    <a class="nav-link" href="pages/contacto.html">Contacto</a>
                 </li>
 
             </ul>
@@ -78,7 +78,7 @@
     <!-- CARDS -->
     <div class="cards container justify-content-center mt-5">
         <div class="card" style="width: 18rem;">
-            <img src="/img/sole3.jpg" class="card-img-top" alt="...">
+            <img src="img/sole3.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Soledad regresa con -Natural- al Teatro Coliseo</h5>
                 <p class="card-text">A poco de haber comenzado la gira nacional de presentación de su nuevo disco
@@ -90,7 +90,7 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="/img/SOLEDAD-696x417.jpg" class="card-img-top" alt="...">
+            <img src="img/SOLEDAD-696x417.jpg" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Cinco noches imponentes y emotivas en el Teatro El Circulo de Rosario</h5>
                 <p class="card-text">Soledad genera pasiones. Y no es difícil entender por qué después de presenciar los
@@ -101,7 +101,7 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="/img/sole_cosquin3.png" class="card-img-top" alt="...">
+            <img src="img/sole_cosquin3.png" class="card-img-top" alt="...">
             <div class="card-body">
                 <h5 class="card-title">Festival EQUAL</h5>
                 <p class="card-text">Los temas que se escucharon, combinan, la música de raíz original
