--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -14,7 +14,7 @@
   </style>
 
   <title>Biografía | Soledad</title>
-  <link rel="icon" href="img/sole-favicon.png" type="image/x-icon">
+  <link rel="icon" href="/img/sole-favicon.png" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <!-- NAVBAR -->
