arreglando rutas absolutas

--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -14,13 +14,13 @@
   </style>
 
   <title>Discografía | Soledad</title>
-  <link rel="icon" href="/img/sole-favicon.png" type="image/x-icon">
+  <link rel="icon" href="../img/sole-favicon.png" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container col-md-10">
-      <a class="navbar-brand" href="/index.html"><img src="/img/soledad_icono.png" class="icono" alt="Logo Soledad"></a>
+      <a class="navbar-brand" href="../index.html"><img src="../img/soledad_icono.png" class="icono" alt="Logo Soledad"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -31,16 +31,16 @@
                   <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="/pages/biografia.html">Biografía</a>
+                  <a class="nav-link" aria-current="page" href="biografia.html">Biografía</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="/pages/discografia.html">Discografía</a>
+                  <a class="nav-link" href="discografia.html">Discografía</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="/pages/agenda.html">Agenda</a>
+                  <a class="nav-link" href="agenda.html">Agenda</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                  <a class="nav-link" href="contacto.html">Contacto</a>
               </li>
 
           </ul>
@@ -49,13 +49,12 @@
 </nav>
 
 
-
 <!-- CARDS -->
 <body>
   <div class="row justify-content-center">
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="/img/cd_10añossoledad.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_10añossoledad.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">10 Años de Soledad</h5>
         </div>
@@ -63,7 +62,7 @@
     </div>
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="/img/cd_2000.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_2000.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">2000</h5>
         </div>
@@ -71,7 +70,7 @@
     </div>
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="/img/cd_20_años.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_20_años.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">20 años</h5>
         </div>
@@ -79,7 +78,7 @@
     </div>
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="/img/cd_adondevayas.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_adondevayas.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">A donde vayas</h5>
         </div>
@@ -87,7 +86,7 @@
     </div>
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="/img/cd_folklore.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_folklore.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Folklore</h5>
         </div>
@@ -95,7 +94,7 @@
     </div>
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="/img/cd_juntosporunica.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_juntosporunica.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Juntos por única vez</h5>
         </div>
@@ -103,7 +102,7 @@
     </div>
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="/img/cd_lafiesta.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_lafiesta.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">La fiesta</h5>
         </div>
@@ -111,7 +110,7 @@
     </div>
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="/img/cd_libre.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_libre.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Libre</h5>
         </div>
@@ -119,7 +118,7 @@
     </div>
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="/img/cd_migente.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_migente.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title center">Mi gente</h5>
         </div>
@@ -127,7 +126,7 @@
     </div>
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="/img/cd_mipais.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_mipais.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Mi país</h5>
         </div>
@@ -135,7 +134,7 @@
     </div>
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="/img/cd_natural.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_natural.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Natural</h5>
         </div>
@@ -143,7 +142,7 @@
     </div>
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="/img/cd_obras.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_obras.jpg" class="card-img-top" alt="...">
         <div class="card-body">
           <h5 class="card-title">Obras</h5>
         </div>
