--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -21,7 +21,7 @@
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container col-md-10">
-      <a class="navbar-brand" href="../index.html"><img src="img/soledad_icono.png" class="icono" alt="Logo Soledad"></a>
+      <a class="navbar-brand" href="../index.html"><img src="../img/soledad_icono.png" class="icono" alt="Logo Soledad"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -57,7 +57,7 @@
     SOLEDAD PASTORUTTI, ES ORIUNDA DE AREQUITO, PEQUEÑO PUEBLO DEL SUR DE LA PROVINCIA DE SANTA FE. NACIÓ EL 12 DE OCTUBRE DE 1980 EN CASILDA, CIUDAD VECINA A AREQUITO. OMAR PASTORUTTI, SU PADRE, LE INCULCÓ SU AMOR POR EL FOLCLORE ARGENTINO Y DESDE MUY PEQUEÑA, ACOMPAÑADA POR MÚSICOS DE SU PUEBLO Y ALREDEDORES, SE PRESENTÓ EN DISTINTOS ESCENARIOS DEL INTERIOR DEL PAÍS.
   </div>
   <div class="bio">
-    <img src="img/sole_bio.jpg" class="img-bio" alt="">
+    <img src="../img/sole_bio.jpg" class="img-bio" alt="">
   </div>
 
   <div class="cuadro-texto2">
