--- a/pages/contacto.html
+++ b/pages/contacto.html
@@ -14,14 +14,14 @@
   </style>
 
   <title>Contacto | Soledad</title>
-  <link rel="icon" href="/img/sole-favicon.png" type="image/x-icon">
+  <link rel="icon" href="../img/sole-favicon.png" type="image/x-icon">
   <link rel="stylesheet" type="text/css" href="/css/style.css">
 </head>
 <!-- NAVBAR -->
 
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
   <div class="container col-md-10">
-      <a class="navbar-brand" href="/index.html"><img src="/img/soledad_icono.png" class="icono" alt="Logo Soledad"></a>
+      <a class="navbar-brand" href="../index.html"><img src="../img/soledad_icono.png" class="icono" alt="Logo Soledad"></a>
       <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
           aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
           <span class="navbar-toggler-icon"></span>
@@ -32,16 +32,16 @@
                   <a class="nav-link" aria-current="page" href="../index.html">Inicio</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" aria-current="page" href="/pages/biografia.html">Biografía</a>
+                  <a class="nav-link" aria-current="page" href="biografia.html">Biografía</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="/pages/discografia.html">Discografía</a>
+                  <a class="nav-link" href="discografia.html">Discografía</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="/pages/agenda.html">Agenda</a>
+                  <a class="nav-link" href="agenda.html">Agenda</a>
               </li>
               <li class="nav-item">
-                  <a class="nav-link" href="/pages/contacto.html">Contacto</a>
+                  <a class="nav-link" href="contacto.html">Contacto</a>
               </li>
 
           </ul>
