arreglando rutas absolutas 2

--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -15,7 +15,7 @@
 
   <title>Biografía | Soledad</title>
   <link rel="icon" href="../img/sole-favicon.png" type="image/x-icon">
-  <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <!-- NAVBAR -->
 
