--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -15,7 +15,7 @@
 
   <title>Discografía | Soledad</title>
   <link rel="icon" href="../img/sole-favicon.png" type="image/x-icon">
-  <link rel="stylesheet" type="text/css" href="/css/style.css">
+  <link rel="stylesheet" type="text/css" href="../css/style.css">
 </head>
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
