Agregando metas y alts

--- a/pages/biografia.html
+++ b/pages/biografia.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="Arequito, Edad, Biografia, Pastorutti, Natalia Pastorutti">
+  <meta name="description" content="Biografía de la artista Soledad Pastorutti">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
@@ -57,7 +59,7 @@
     SOLEDAD PASTORUTTI, ES ORIUNDA DE AREQUITO, PEQUEÑO PUEBLO DEL SUR DE LA PROVINCIA DE SANTA FE. NACIÓ EL 12 DE OCTUBRE DE 1980 EN CASILDA, CIUDAD VECINA A AREQUITO. OMAR PASTORUTTI, SU PADRE, LE INCULCÓ SU AMOR POR EL FOLCLORE ARGENTINO Y DESDE MUY PEQUEÑA, ACOMPAÑADA POR MÚSICOS DE SU PUEBLO Y ALREDEDORES, SE PRESENTÓ EN DISTINTOS ESCENARIOS DEL INTERIOR DEL PAÍS.
   </div>
   <div class="bio">
-    <img src="../img/sole_bio.jpg" class="img-bio" alt="">
+    <img  src="../img/sole_bio.jpg" class="img-bio" alt="Imagen Soledad Biografía">
   </div>
 
   <div class="cuadro-texto2">
