--- a/pages/discografia.html
+++ b/pages/discografia.html
@@ -4,6 +4,8 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta name="keywords" content="10 años soledad, la fiesta, 2000, a donde vayas, floklore, Libre, Natural, Obras">
+  <meta name="description" content="Discografía completa de la artista Soledad Pastorutti">
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
@@ -54,7 +56,7 @@
   <div class="row justify-content-center">
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="../img/cd_10añossoledad.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_10añossoledad.jpg" class="card-img-top" alt="Tapa cd 10 años">
         <div class="card-body">
           <h5 class="card-title">10 Años de Soledad</h5>
         </div>
@@ -62,7 +64,7 @@
     </div>
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="../img/cd_2000.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_2000.jpg" class="card-img-top" alt="Tapa cd 2000">
         <div class="card-body">
           <h5 class="card-title">2000</h5>
         </div>
@@ -70,7 +72,7 @@
     </div>
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="../img/cd_20_años.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_20_años.jpg" class="card-img-top" alt="Tapa cd 20 años">
         <div class="card-body">
           <h5 class="card-title">20 años</h5>
         </div>
@@ -78,7 +80,7 @@
     </div>
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="../img/cd_adondevayas.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_adondevayas.jpg" class="card-img-top" alt="Tapa cd a donde vayas">
         <div class="card-body">
           <h5 class="card-title">A donde vayas</h5>
         </div>
@@ -86,7 +88,7 @@
     </div>
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="../img/cd_folklore.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_folklore.jpg" class="card-img-top" alt="Tapa cd Folklore">
         <div class="card-body">
           <h5 class="card-title">Folklore</h5>
         </div>
@@ -94,7 +96,7 @@
     </div>
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="../img/cd_juntosporunica.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_juntosporunica.jpg" class="card-img-top" alt="Tapa juntos por unica vez">
         <div class="card-body">
           <h5 class="card-title">Juntos por única vez</h5>
         </div>
@@ -102,7 +104,7 @@
     </div>
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="../img/cd_lafiesta.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_lafiesta.jpg" class="card-img-top" alt="Tapa cd la fiesta">
         <div class="card-body">
           <h5 class="card-title">La fiesta</h5>
         </div>
@@ -110,7 +112,7 @@
     </div>
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="../img/cd_libre.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_libre.jpg" class="card-img-top" alt="Tapa cd Libre">
         <div class="card-body">
           <h5 class="card-title">Libre</h5>
         </div>
@@ -118,7 +120,7 @@
     </div>
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="../img/cd_migente.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_migente.jpg" class="card-img-top" alt="Tapa cd Mi gente">
         <div class="card-body">
           <h5 class="card-title center">Mi gente</h5>
         </div>
@@ -126,7 +128,7 @@
     </div>
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="../img/cd_mipais.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_mipais.jpg" class="card-img-top" alt="Tapa cd Mi pais">
         <div class="card-body">
           <h5 class="card-title">Mi país</h5>
         </div>
@@ -134,7 +136,7 @@
     </div>
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="../img/cd_natural.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_natural.jpg" class="card-img-top" alt="Tapa cd Natural">
         <div class="card-body">
           <h5 class="card-title">Natural</h5>
         </div>
@@ -142,7 +144,7 @@
     </div>
     <div class="col-md-3">
       <div class="card-disco">
-        <img src="../img/cd_obras.jpg" class="card-img-top" alt="...">
+        <img src="../img/cd_obras.jpg" class="card-img-top" alt="Tapa cd Obras">
         <div class="card-body">
           <h5 class="card-title">Obras</h5>
         </div>
