--- a/index.html
+++ b/index.html
@@ -4,6 +4,8 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta name="keywords" content="Soledad, Pastorutti, La Sole, Gringa, Tren del cielo, A don ata, Arequito, Poncho, Folclore, Foklore">
+    <meta name="description" content="Fan Page oficial de la artista argentina Soledad Pastorutti.">
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet"
         integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/js/bootstrap.bundle.min.js"
@@ -49,18 +51,20 @@
 </nav>
 
 <body>
+    <h1><strong>Fanpage oficial de La Sole</strong></h1>
+    <div class="linea-horizontal"></div>
     <!-- CARROUSEL -->
     <div class="container col-md-6">
         <div id="carouselExampleAutoplaying" class="carousel slide container mt-5" data-bs-ride="carousel">
             <div class="carousel-inner">
                 <div class="carousel-item active">
-                    <img src="img/sole_portada.jpg" class="d-block w-100" alt="...">
+                    <img src="img/sole_portada.jpg" class="d-block w-100" alt="Imagen Soledad portada">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/sole_portada2.jpg" class="d-block w-100" alt="...">
+                    <img src="img/sole_portada2.jpg" class="d-block w-100" alt="Imagen Soledad portada 2">
                 </div>
                 <div class="carousel-item">
-                    <img src="img/soledad4.jpg" class="d-block w-100" alt="...">
+                    <img src="img/soledad4.jpg" class="d-block w-100" alt="Imagen Soledad portada 3">
                 </div>
             </div>
             <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleAutoplaying"
@@ -78,7 +82,7 @@
     <!-- CARDS -->
     <div class="cards container justify-content-center mt-5">
         <div class="card" style="width: 18rem;">
-            <img src="img/sole3.jpg" class="card-img-top" alt="...">
+            <img src="img/sole3.jpg" class="card-img-top" alt="Soledad teatro Coliseo">
             <div class="card-body">
                 <h5 class="card-title">Soledad regresa con -Natural- al Teatro Coliseo</h5>
                 <p class="card-text">A poco de haber comenzado la gira nacional de presentación de su nuevo disco
@@ -90,7 +94,7 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="img/SOLEDAD-696x417.jpg" class="card-img-top" alt="...">
+            <img src="img/SOLEDAD-696x417.jpg" class="card-img-top" alt="Soledad teatro El Circulo">
             <div class="card-body">
                 <h5 class="card-title">Cinco noches imponentes y emotivas en el Teatro El Circulo de Rosario</h5>
                 <p class="card-text">Soledad genera pasiones. Y no es difícil entender por qué después de presenciar los
@@ -101,7 +105,7 @@
             </div>
         </div>
         <div class="card" style="width: 18rem;">
-            <img src="img/sole_cosquin3.png" class="card-img-top" alt="...">
+            <img src="img/sole_cosquin3.png" class="card-img-top" alt="Soledad Festival Equal">
             <div class="card-body">
                 <h5 class="card-title">Festival EQUAL</h5>
                 <p class="card-text">Los temas que se escucharon, combinan, la música de raíz original
