--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
 <!-- NAVBAR -->
 <nav class="navbar navbar-expand-lg bg-body-tertiary">
     <div class="container col-md-10">
-        <a class="navbar-brand" href="index.html"><img src="img/soledad_icono.png" class="icono" alt="Logo Soledad"></a>
+        <a class="navbar-brand" href="./index.html"><img src="img/soledad_icono.png" class="icono" alt="Logo Soledad"></a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavDropdown"
             aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
